syntax = "proto3";

package packingpb;
option go_package = "./packingpb";

message Packing {
    int64 id = 1;
    string fo_id = 2;
    int32 line_id = 3;
    int32 machine_id = 4;
    int32 unit_id = 5;
    int32 department_id = 6;
    int32 area_id = 7;
    string completed_at = 8;
    int32 status = 9;
    string createdAt = 10;
    string updatedAt = 11;
}

message EquipmentChecking {
    int64 id = 1;
    int64 id_equipment_checking_list = 2;
    int64 packing_id = 3;
    int32 asset_equipment_id = 4;
    
    string fo_id = 5;
    string fo_photo = 6;
    int32 fo_condition = 7;
    string fo_note = 8;

    string ao_id = 9;
    int32 ao_conclusion = 10;
    string ao_note = 11;
    string ao_created_at = 12;

    string mo_id = 13;
    string mo_repair_photo = 14;
    string mo_note = 15;
    string mo_created_at = 16;

    string mr_id = 17;
    string mr_comment = 18;
    string mr_created_at = 19;
}

// All
message GetPackingsRequest {
    int32 nophoto = 1;
    int32 page = 2;
    int32 perpage = 3;
    int32 status = 4;
    int32 line_id = 5;
    int32 machine_id = 6;
    string date = 7; 
    int32 fo_condition = 8;
    int32 ao_condition = 9;
}
message GetPackingsResponse {
    repeated Packing packings = 1;
}

message GetPackingRequest {
    int64 id = 1;
}
message GetPackingResponse {
    Packing packing = 1;
    repeated EquipmentChecking equipment_checkings = 2;
}

// FO
message CreatePackingRequest {
    string user_id = 1;
    int32 line_id = 2;
    int32 machine_id = 3;
    int32 status_sync = 4;
    string observation_datetime = 5;
    int32 unit_id = 6;
    int32 department_id = 7;
    int32 area_id = 8;
}
message CreatePackingResponse {
    int32 id = 1;
    CreatePackingRequest data = 2;
}

// FO
message CreateEquipmentCheckingRequest {
    int32 id_equipment_checking_list = 1;
    int32 id_packaging_check = 2;
    int32 id_asset_equipment = 3;
    string photo = 4;
    int32 condition = 5;
    string note = 6;
    int32 status = 7;
    string observation_datetime = 8;
}
message CreateEquipmentCheckingResponse {
    int32 id = 1;
    CreateEquipmentCheckingRequest data = 2;
}

// AO
message UpdateEquipmentCheckingRequest {
    int32 ao_conclusion = 1;
    string ao_note = 2;
    string ao_observation_datetime = 3;
    string ao_id = 4;
}
message UpdateEquipmentCheckingResponse {
    int32 id = 1;
}

// QFS
message CreateCommentRequest {
    int32 equipment_checking_id = 1;
    string mr_comment = 2;
    int32 mr_id = 3;
}
message CreateCommentResponse {
    int32 id = 1;
}

service PackingService {
    // All
    rpc GetPackings(GetPackingsRequest) returns (GetPackingsResponse) {};
    rpc GetPacking(GetPackingRequest) returns (GetPackingResponse) {};
    // FO
    rpc CreatePacking(CreatePackingRequest) returns (CreatePackingResponse) {};
    rpc CreateEquipmentChecking(CreateEquipmentCheckingRequest) returns (CreateEquipmentCheckingResponse) {};
    // AO
    rpc UpdateEquipmentChecking(UpdateEquipmentCheckingRequest) returns (UpdateEquipmentCheckingResponse) {};
    // QFS
    rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {};
}